--- a/ThesisProject/appsettings.json
+++ b/ThesisProject/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Musification": "SERVER=localhost;Port=5432;Database=Musification;User Id=postgres;Password=123;"
+
+
+  }
 }
